--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,12 @@
 [submodule "virus-assembly"]
 	path = virus-assembly
 	url = https://github.com/biowdl/virus-assembly.git
+[submodule "somatic-variantcalling"]
+	path = somatic-variantcalling
+	url = https://github.com/biowdl/somatic-variantcalling.git
+[submodule "compare-gff"]
+	path = compare-gff
+	url = https://github.com/biowdl/compare-gff.git
+[submodule "rna-coding-potential"]
+	path = rna-coding-potential
+	url = https://github.com/biowdl/rna-coding-potential.git
