--- a/.gitmodules
+++ b/.gitmodules
@@ -31,21 +31,15 @@
 [submodule "bam-to-gvcf"]
 	path = bam-to-gvcf
 	url = https://github.com/biowdl/bam-to-gvcf.git
-[submodule "gams"]
-	path = gams
-	url = https://github.com/biowdl/gams.git
-[submodule "ReAssembly"]
-	path = ReAssembly
-	url = https://github.com/biowdl/ReAssembly.git
-[submodule "virus-assembly"]
-	path = virus-assembly
-	url = https://github.com/biowdl/virus-assembly.git
 [submodule "somatic-variantcalling"]
 	path = somatic-variantcalling
 	url = https://github.com/biowdl/somatic-variantcalling.git
-[submodule "compare-gff"]
-	path = compare-gff
-	url = https://github.com/biowdl/compare-gff.git
 [submodule "rna-coding-potential"]
 	path = rna-coding-potential
 	url = https://github.com/biowdl/rna-coding-potential.git
+[submodule "small-rna"]
+	path = small-rna
+	url = https://github.com/biowdl/small-rna.git
+[submodule "cnv-calling"]
+	path = cnv-calling
+	url = https://github.com/biowdl/cnv-calling.git
